text on desktop merch page not showing, fixed

--- a/static/ecomerce_site/css/merch.scss
+++ b/static/ecomerce_site/css/merch.scss
@@ -17,7 +17,7 @@
         z-index: 1;
     }
 
-@media screen and (max-width: 900px){
+@media screen and (min-width: 900px){
     .store_header_text {
         width: 100%;
         position: absolute;
